--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sLh-x5-Qkr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-318" y="540"/>
+            <point key="canvasLocation" x="-942" y="1183"/>
         </scene>
         <!--Loading View Controller-->
         <scene sceneID="ojO-vT-4l5">
@@ -94,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yoq-4Z-qxb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="366" y="540"/>
+            <point key="canvasLocation" x="-281" y="1183"/>
         </scene>
         <!--Root Tab Controller-->
         <scene sceneID="h2A-x6-m7w">
@@ -115,7 +115,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JRV-fZ-84H" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationItem title="Taylr" id="KlQ-zu-EEb"/>
             </objects>
-            <point key="canvasLocation" x="366" y="1247"/>
+            <point key="canvasLocation" x="358" y="1183"/>
         </scene>
         <!--Discover-->
         <scene sceneID="NpM-jt-gve">
@@ -378,11 +378,9 @@
                     </tabBarItem>
                     <connections>
                         <outlet property="tableView" destination="4cg-hq-bZ8" id="YhK-na-cJu"/>
-                        <segue destination="1Ro-gk-VhZ" kind="unwind" identifier="ChatsToDiscover" unwindAction="unwindToDiscover:" id="Fog-Yc-OF8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NWp-vJ-jcK" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="1Ro-gk-VhZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1030" y="2032"/>
         </scene>
@@ -764,7 +762,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eMh-jf-Tma" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="372.5" y="3090"/>
+            <point key="canvasLocation" x="366.5" y="3186"/>
         </scene>
         <!--Conversation View Controller-->
         <scene sceneID="9Wr-pj-gUK">
@@ -788,8 +786,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3a-sc-A4a" userLabel="Navigation Bar">
                                 <rect key="frame" x="0.0" y="20" width="600" height="70"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
-                                        <rect key="frame" x="235" y="10" width="131" height="50"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KPL-gz-OCJ">
+                                        <rect key="frame" x="123" y="10" width="131" height="50"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample-taylor-avatar" translatesAutoresizingMaskIntoConstraints="NO" id="uD7-V4-mF6" customClass="UserAvatarView" customModule="Taylr" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -877,14 +875,14 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRh-e3-SEP" userLabel="Badge">
-                                <rect key="frame" x="400" y="43" width="12" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRh-e3-SEP" userLabel="Badge">
+                                <rect key="frame" x="288" y="43" width="12" height="24"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-73-k20">
-                                <rect key="frame" x="396" y="45" width="20" height="20"/>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-73-k20">
+                                <rect key="frame" x="284" y="45" width="20" height="20"/>
                             </activityIndicatorView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EHm-XA-QtP">
                                 <rect key="frame" x="0.0" y="90" width="600" height="510"/>
@@ -1200,12 +1198,10 @@
                         <outlet property="inviteeLastNameField" destination="hkr-0F-0DU" id="dm6-Sn-0fc"/>
                         <outlet property="nameLabel" destination="Lxr-IQ-qXL" id="xZv-uD-p8B"/>
                         <outlet property="usernameLabel" destination="D9T-Ho-de1" id="8Fo-jI-Fow"/>
-                        <segue destination="W2c-OH-HAO" kind="unwind" identifier="MeToDiscover" unwindAction="unwindToDiscover:" id="H52-9G-GKG"/>
                         <segue destination="VVH-o2-j4o" kind="custom" identifier="Onboarding_Login" customClass="LinkedStoryboardPushSegue" id="tQ4-cK-7eW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yWV-ja-hlq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="W2c-OH-HAO" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="Qbq-hv-eUJ">
                     <connections>
                         <segue destination="O0f-xd-Ps7" kind="show" id="zOU-zf-DhR"/>
@@ -1230,7 +1226,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h0p-Zh-CC4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-766" y="2615"/>
+            <point key="canvasLocation" x="-775" y="2199"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="h30-kk-M5h">
@@ -1431,7 +1427,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-273" y="2912"/>
+            <point key="canvasLocation" x="-273" y="2986"/>
         </scene>
         <!--Onboarding - Signup-->
         <scene sceneID="rd6-Ha-sjX">
@@ -1449,7 +1445,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uGc-ka-nq9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="905" y="540"/>
+            <point key="canvasLocation" x="-775" y="1857"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="Kj1-tC-fKy">
@@ -1457,7 +1453,7 @@
                 <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="vertical" spineLocation="none" id="Ffr-dA-aoe" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YO2-vE-plP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1030" y="4228"/>
+            <point key="canvasLocation" x="1706" y="3140"/>
         </scene>
     </scenes>
     <resources>
@@ -1476,8 +1472,8 @@
         <image name="sample-taylor-video-frame" width="375" height="375"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="kNN-lk-QB3"/>
         <segue reference="Fwv-Pj-RXP"/>
         <segue reference="Hrk-zE-6Yh"/>
-        <segue reference="tQ4-cK-7eW"/>
     </inferredMetricsTieBreakers>
 </document>
